--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=projeto-bcd-lobinho
+spring.datasource.url=jdbc:mysql://localhost:3306/bcd
+spring.datasource.username=aluno
+spring.datasource.password=aluno
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=none
