vou povoar o banco com taylor swift e seus personagens

--- a/build.gradle
+++ b/build.gradle
@@ -28,3 +28,6 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+bootRun {
+	environment 'spring.output.ansi.console-available', true
+}
