--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
-spring.application.name=projeto-bcd-lobinho
-spring.datasource.url=jdbc:mysql://localhost:3306/bcd
+# Conexão com o banco de dados MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/escoteiro
 spring.datasource.username=aluno
 spring.datasource.password=aluno
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+spring.output.ansi.enabled=ALWAYS
