--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 # Conexão com o banco de dados MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/escoteiro
-spring.datasource.username=aluno
+spring.datasource.url=jdbc:mysql://localhost:3307/bcd
+spring.datasource.username=root
 spring.datasource.password=aluno
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
