--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Conexão com o banco de dados MySQL
-spring.datasource.url=jdbc:mysql://localhost:3307/bcd
-spring.datasource.username=root
+spring.datasource.url=jdbc:mysql://localhost:3306/bcd
+spring.datasource.username=aluno
 spring.datasource.password=aluno
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
@@ -9,3 +9,14 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 spring.output.ansi.enabled=ALWAYS
+
+# Sets the correct SQL dialect for MySQL 8+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+# Tells Hibernate to validate the schema (table/column mappings) at startup, but not create or update anything.
+spring.jpa.defer-datasource-initialization=true
+#Formats SQL logs to be more readable (multiline, indented).
+logging.level.org.hibernate.SQL=DEBUG
+# Logs the parameter bindings to the SQL queries (e.g., what values were bound to ?).
+logging.level.org.hibernate.type.descriptor.sql=TRACE
+# Stops Hibernate from converting camelCase to snake_case.
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
